front-shoppingcart-fix: dark mode colors

--- a/Frontend/assets/css/shopping-cart.css
+++ b/Frontend/assets/css/shopping-cart.css
@@ -2,9 +2,9 @@
   height: 100%;
 }
 
-main h2 {
+/* main h2 {
   color: black !important;
-}
+} */
 
 /* Products not customizable */
 
